get diary  point
